--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,9 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Globaal font voor hele project */
+html,
+body {
+  font-family: "Roboto", ui-sans-serif, system-ui;
+}
